--- a/week1/day2 EXERCISE.ipynb
+++ b/week1/day2 EXERCISE.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "OLLAMA_API = \"http://localhost:11434/api/chat\"\n",
     "HEADERS = {\"Content-Type\": \"application/json\"}\n",
-    "MODEL = \"llama3.2\""
+    "MODEL = \"llama3.2:1b\""
    ]
   },
   {
@@ -131,7 +131,7 @@
    "source": [
     "# Let's just make sure the model is loaded\n",
     "\n",
-    "!ollama pull llama3.2"
+    "!ollama pull llama3.2:1b"
    ]
   },
   {
@@ -289,6 +289,80 @@
    "id": "6de38216-6d1c-48c4-877b-86d403f4e0f8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Some websites need you to use proper headers when fetching them:\n",
+    "headers = {\n",
+    " \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
+    "}\n",
+    "\n",
+    "class Website:\n",
+    "\n",
+    "    def __init__(self, url):\n",
+    "        \"\"\"\n",
+    "        Create this Website object from the given url using the BeautifulSoup library\n",
+    "        \"\"\"\n",
+    "        self.url = url\n",
+    "        response = requests.get(url, headers=headers)\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "        self.title = soup.title.string if soup.title else \"No title found\"\n",
+    "        for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
+    "            irrelevant.decompose()\n",
+    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6177c6ec-a45b-4748-a9ae-43f62b3b0edf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"You are an assistant that analyzes the contents of a website \\\n",
+    "and provides a short summary, ignoring text that might be navigation related. \\\n",
+    "Respond in markdown.\"\n",
+    "\n",
+    "def user_prompt_for(website):\n",
+    "    user_prompt = f\"You are looking at a website titled {website.title}\"\n",
+    "    user_prompt += \"\\nThe contents of this website is as follows; \\\n",
+    "please provide a short summary of this website in markdown. \\\n",
+    "If it includes news or announcements, then summarize these too.\\n\\n\"\n",
+    "    user_prompt += website.text\n",
+    "    return user_prompt\n",
+    "\n",
+    "def messages_for(website):\n",
+    "    return [\n",
+    "        {\"role\": \"system\", \"content\": system_prompt},\n",
+    "        {\"role\": \"user\", \"content\": user_prompt_for(website)}\n",
+    "    ]\n",
+    "\n",
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "def summarize(url):\n",
+    "    website = Website(\"https://edwarddonner.com\")\n",
+    "    response = ollama.chat(model=MODEL, messages=messages_for(website))\n",
+    "    return response['message']['content']\n",
+    "\n",
+    "def display_summary(url):\n",
+    "    summary = summarize(url)\n",
+    "    display(Markdown(summary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db92ae9e-e8f0-499f-a95f-a79903ac48cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_summary(\"https://edwarddonner.com\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17682042-e81c-4971-a389-2d346752f604",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -308,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
