Solve week 1 exercise

--- a/week1/week1 EXERCISE.ipynb
+++ b/week1/week1 EXERCISE.ipynb
@@ -18,7 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports"
+    "# imports\n",
+    "\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI\n",
+    "from IPython.display import Markdown, display, update_display"
    ]
   },
   {
@@ -31,7 +36,7 @@
     "# constants\n",
     "\n",
     "MODEL_GPT = 'gpt-4o-mini'\n",
-    "MODEL_LLAMA = 'llama3.2'"
+    "MODEL_LLAMA = 'llama3.2:1b'"
    ]
   },
   {
@@ -41,7 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set up environment"
+    "# set up environment\n",
+    "\n",
+    "load_dotenv(override=True)\n",
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "\n",
+    "if openai_api_key and openai_api_key.startswith('sk-proj-') and len(openai_api_key)>10:\n",
+    "    print(\"API key looks good so far\")\n",
+    "else:\n",
+    "    print(\"There might be a problem with your API key? Please visit the troubleshooting notebook!\")\n",
+    "    "
    ]
   },
   {
@@ -66,7 +80,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get gpt-4o-mini to answer, with streaming"
+    "# Get gpt-4o-mini to answer, with streaming\n",
+    "\n",
+    "system_prompt = \"You are an experienced developer, a technical expert with a deep knowledge about various \\\n",
+    "computer science and programming subjects. A less experienced developer is asking you questions about programming.\\\n",
+    "Please reply in a way that is both easy to understand and comprehensive. Respond in Markdown.\"\n",
+    "\n",
+    "def askAI(ai, model, question):\n",
+    "    stream = ai.chat.completions.create(\n",
+    "        model=model,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": question}\n",
+    "        ],\n",
+    "        stream=True\n",
+    "    )\n",
+    "    \n",
+    "    response = \"\"\n",
+    "    display_handle = display(Markdown(\"\"), display_id=True)\n",
+    "    for chunk in stream:\n",
+    "        response += chunk.choices[0].delta.content or ''\n",
+    "        response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
+    "        update_display(Markdown(response), display_id=display_handle.display_id)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dee6e19b-bb4f-49d3-8abb-f4ede1dc7aa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get GPT-4o-mini to answer\n",
+    "openai = OpenAI(api_key=openai_api_key)\n",
+    "askAI(openai, MODEL_GPT, question)"
    ]
   },
   {
@@ -76,8 +123,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get Llama 3.2 to answer"
+    "# Get Llama 3.2 to answer\n",
+    "ollama = OpenAI(base_url='http://localhost:11434/v1', api_key='ollama')\n",
+    "askAI(ollama, MODEL_LLAMA, question)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b13a56d-de1d-4fa0-859e-268ede925a23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -96,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
